antonio_gamez/session-02/exercise-01/resources/ingress/drupal-root-ingress.yaml
# ############################ # ############################
# ## Bitnami K8S training
# ## session02/exercise01
# #
# ## Author: Antonio Gamez-Diaz
# ## Contact: antoniogamez@us.es
# #
# # File: drupal ingress
# # Purpose: redirects "drupal.k8s.governify.io/" to /drupal with a 301 rewrite
# ############################ # ############################
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drupal-root-ingress
  namespace: s02-exercise-01
  labels:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/(.*)$ /drupal/$1 redirect; # do the 301 redirect to /.../ -> /drupal/.../
spec:
  tls:
  - hosts:
    - drupal.k8s.governify.io
    secretName: k8s-governify-io-tls
  rules:
  - host: drupal.k8s.governify.io # drupal.k8s.governify.io/drupal: drupal
    http:
      paths:
      - path: / # handle base path requests
        backend:
          serviceName: drupal
          servicePort: http
